# OriMania

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
admin/: TODO.txt  todo.txt
app/: CMakeLists.txt  OriAnalysis.cpp  OriAnalysis1.cpp  OriAnalysis2.cpp
data/: exampIndEo3Angles.txt  exampParmGroup.txt
doc/: CMakeLists.txt  Doxyfile.in
include/: Analysis.hpp  Combo.hpp  Convention.hpp  Key.hpp  OriMania.hpp  Orientation.hpp  ParmGroup.hpp  Permute.hpp  Rotation.hpp  Timer.hpp  _.hpp  assert.hpp  io.hpp  mapkey.hpp
src/: CMakeLists.txt  Convention.cpp  OriMania.cpp  ParmGroup.cpp  _.cpp  io.cpp
test/: CMakeLists.txt  Simulation.cpp  Simulation.hpp  _.cpp  test_Analyse.cpp  test_Analysis.cpp  test_Convention.cpp  test_Orientation.cpp  test_ParmGroup.cpp  test_Permute.cpp  test_Rotation.cpp  test_Speed.cpp  test_Version.cpp  test_cmake.cpp  test_io.cpp
theory/: OriManiaTheory.lyx  References.bib
